--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,9 @@
 html { 
-  background: url(pr_source.jpg) no-repeat center center fixed; 
+ /* background: url(pr_source.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
+  background-size: cover;*/
 }
 
 #goToBattle{
